[tool.poetry]
name = "airbnb-backend"
version = "0.1.0"
description = ""
authors = ["SonJinHYo <wlsgy95@naver.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "~4.0"
djangorestframework = "^3.14.0"
black = "^22.12.0"
pyjwt = "^2.6.0"
django-environ = "^0.9.0"
django-cors-headers = "^3.13.0"
requests = "^2.28.2"
dj-database-url = "^1.2.0"
psycopg2-binary = "^2.9.5"
whitenoise = {extras = ["brotli"], version = "^6.3.0"}
gunicorn = "^20.1.0"
setuptools = "^67.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
